--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,31 @@
 					<maxmem>256m</maxmem>
 				</configuration>
 			</plugin>
+		    <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <executions>
+                        <execution>
+                            <id>auto-clean</id>
+                            <phase>clean</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                            <configuration>
+                                <filesets>
+                                    <fileset>
+                                        <directory>${basedir}/logs/</directory>
+                                        <includes>*.log</includes>
+                                    </fileset>
+                                    <fileset>
+                                        <directory>${basedir}/screenshots/</directory>
+                                        <includes>*.png</includes>
+                                    </fileset>
+                                </filesets>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
 		</plugins>
 	</build>
 </project>
